# red_ribbon_mk3

./: .gitignore  CLAUDE.md  CODEOWNERS  FINAL_TEST_IMPLEMENTATION_REPORT.md  README.md  UNIT_TESTS_IMPLEMENTATION_REPORT.md  _mypy.ini  _pytest.ini  comfyui_version.py  install.sh  invalid_config_values.yaml  main.py  open_ai_key.zshrc  pyproject.toml  red_ribbon.txt  requirements.txt  requirements_custom_nodes.txt  run_mypy.sh  start.sh  start_demo.sh  start_make_gif.sh  test.sh
app/: custom_node_manager.py
comfy/: cli_args.py
custom_nodes/: show_text.py  websocket_image_save.py
custom_nodes/gguf_visualizers/: _visualizer_private_config.yaml  tensor_comparison_to_image.py  tensor_to_image.py  visualizer_config.yaml  visualizer_private_config.yaml
custom_nodes/gguf_visualizers/model_classes/: gguf_model.py  model_protocol.py  quantized_class.py  stable_diffusion_model.py  stable_diffusion_model_stubs.md  torch_model.py
custom_nodes/red_ribbon/: __init__.py  __version__.py  _custom_errors.py  _custom_types.py  choice_lists.py  configs.py  configs.yaml  container.py  count_lines_in_code_files.py  database.py  llm.py  logger.py  main.py  make_gif.py  minimum_example.py  node_list.json  node_types.py  private_configs.yaml
tests-unit/socialtoolkit_/: TEST_STUBS_README.md
tests_unit/: README.md  inject_assertions.py  type_checking.py
tests_unit/comfy_test/: folder_path_test.py
tests_unit/socialtoolkit_/: IMPLEMENTATION_SUMMARY.md  README.md  TEST_STUBS_README.md  scratch.md  test_socialtoolkit_pipeline.py  variable_codebook_assertions.json
(+286 files in other folders)
