[project]
name = "red_ribbon_mk3"
version = "0.1.00"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/kylerose1946/red_ribbon_mk3"
repository = "https://github.com/kylerose1946/red_ribbon_mk3"
documentation = "https://github.com/kylerose1946/red_ribbon_mk3/wiki"

[tool.ruff]
lint.select = [
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb"]
